static/css/main.css
html,
body,
main {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  background-color: black;
}

#carousel {
  position: relative;
  height: 610px;
  top: 50%;
  margin-bottom: -10px;
  transform: translateY(-50%);
  overflow: hidden;
}
#carousel > div {
  position: absolute;
  transition: transform 1s, left 1s, opacity 1s, z-index 0s;
  opacity: 1;
}
#carousel div img {
  width: 400px;
  transition: width 1s;
}
#carousel div.hideLeft {
  left: 0%;
  opacity: 0;
  transform: translateY(50%) translateX(-50%);
}
#carousel div.hideLeft img {
  width: 200px;
}
#carousel div.hideRight {
  left: 100%;
  opacity: 0;
  transform: translateY(50%) translateX(-50%);
}
#carousel div.hideRight img {
  width: 200px;
}
#carousel div.prev {
  z-index: 5;
  left: 20%;
  transform: translateY(50px) translateX(-50%);
}
#carousel div.prev img {
  width: 300px;
}
#carousel div.prevLeftSecond {
  z-index: 4;
  left: 5%;
  transform: translateY(50%) translateX(-50%);
  opacity: 0.7;
}
#carousel div.prevLeftSecond img {
  width: 200px;
  opacity: 0.4;
}
#carousel div.selected {
  height: 100%;
  z-index: 10;
  left: 50%;
  transform: translateY(0px) translateX(-50%);
}
#carousel .item-cont {
  width: 100%;
  height: 100%;
  position: relative;
}
#carousel div.selected iframe {
  height: 580px;
  width: 450px;
}
#carousel div.next {
  z-index: 5;
  left: 80%;
  transform: translateY(50px) translateX(-50%);
}
#carousel div.next img {
  width: 300px;
}
#carousel div.nextRightSecond {
  z-index: 4;
  left: 95%;
  transform: translateY(50%) translateX(-50%);
  opacity: 0.7;
}
#carousel div.nextRightSecond img {
  width: 200px;
  opacity: 0.4;
}
.slider-footer {
  margin: 25px;
  margin-top: 80px;
}
.buttons {
  display: flex;
  justify-content: space-between;
  margin-bottom: 15px;
}
.inline-btn {
  border: 1px solid rgb(255, 255, 255);
  display: inline-flex;
  position: relative;
  text-align: center;
  transition: all 300ms ease-in-out 0s;
  align-items: center;
  border-radius: 8px;
  text-transform: uppercase;
  justify-content: center;
  font-size: 1.2rem;
  width: 55px;
  height: 26px;
  color: rgb(255, 255, 255);
  cursor: pointer;
}
.inline-btn:hover {
  background-color: #fff;
  color: #000;
}
.inline-btn span {
  font-family: tahoma;
  font-size: 12px;
  text-align: center;
  line-height: 12px;
}
.progress-bar-wrapper {
  left: 0px;
  right: 0px;
  border: 1px solid rgb(255, 255, 255);
  bottom: 0px;
  height: 10px;
  display: block;
  overflow: hidden;
  background: transparent;
  box-sizing: border-box;
}

.progress-bar-inner {
  width: 57%;
  height: 100%;
  background-color: #fff;
  transition: 1s ease;
}
.carousel__item-title-hidden {
  display: none;
}
.carousel__item-title {
  display: flex;
  align-items: end;
  justify-content: center;
  margin: 0px;
  width: 100%;
  text-align: center;
}

.carousel__item-title a,
a:hover,
a:focus,
a:active {
  text-decoration: none;
  font-family: tahoma;
  color: #fff;
  text-align: center;
}

.carousel-header {
  position: relative;
}

.carousel-header .close-icon {
  position: absolute;
  height: 22px;
  top: 10px;
  right: 16px;
  cursor: pointer;
}

.carousel-header .grid-icon {
  position: absolute;
  height: 22px;
  top: 10px;
  right: 44px;
  cursor: pointer;
}

